@@ -15,6 +15,6 @@ AUX StartPhase.java.diff 568 RMD160 a9a5dc49fb4257c3b6ced37ec10c8b312612769c SHA
 AUX StopPhase.java.diff 556 RMD160 8980a3d53840dde3733c37cb5e87b8271a90203a SHA1 5962a152d51c39d3e08006feb920085377151ef1 SHA256 71cd21ae83fc2bb46d084b52c81fbf5f0a81a6cd4377d20a7b51b5e66c0ead0f
 AUX SuspendPhase.java.diff 576 RMD160 b5ecd18ac568a489ed4fa43ef3178bb53d422480 SHA1 8e438c6243c635d2b4d60ec9fb4bdfbaff138ecb SHA256 d469cd1352ecc26a141fff31f8f30330961cb09e7c3c270370df54627a4adf42
 DIST plexus-avalon-personality-0.13.tar.bz2 11198 RMD160 0bb6f5018f676bfb46c853960544ba0ac322534e SHA1 34ff1d201e69aad334f6902392326e17a662b466 SHA256 db2c4a89aa932a0b29dee647809a8b9de07906e06600dcc6505262b7ef4eecbb
-EBUILD plexus-avalon-personality-0.13.ebuild 1646 RMD160 959a502b67b7aec6f58b2f51260742f72e15a86f SHA1 acfd53cb3ff34be585f6f36f55b34b6cdfece3b1 SHA256 937feded8751da4b3082051f003c48bf1ef5657938c6d7dabac86330d688a610
-MISC ChangeLog 994 RMD160 e5365f98ecfd17c18a43d1c28e7f03df07ea878d SHA1 2f2dc6c092df09bb68e9402776dfe6c6812b8f3b SHA256 cdfff36a69a02336caf63312389f3af17497496386429f3310e6a86e2ec90795
+EBUILD plexus-avalon-personality-0.13.ebuild 1668 RMD160 cafdab7205b6c82145eb94180530021bf3d27368 SHA1 f18899d4cb267ad7fe4279a79e5a5f139e545a95 SHA256 119fecc82169b0619c1eb9ce4c748f4ef59cce92778fa6fad1af4d06fcc075e1
+MISC ChangeLog 1096 RMD160 d1ed8a9e6787510f2affeb6c2b309fb986c4329d SHA1 fc117b63b102fbc169e3b98f17cb451e43feba16 SHA256 028f69109f308f765f162786716efa1dc889796fcb9c0d1eda2d188114d0d481
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
