@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 May 2007; kiorky <kiorky@cryptelium.net>
+  plexus-avalon-personality-0.13.ebuild:
+  fixing deps
+
   25 Apr 2007; kiorky <kiorky@cryptelium.net>
   plexus-avalon-personality-0.13.ebuild:
   Migrating to new maven eclass
